@@ -1,5 +1,10 @@
 * Jan 31 2001 hship
 
+Remove some older SITE_xxx variables, no longer used.
+Use the -c option with openjade, instead of setting SGML_CATALOG_FILES variable.
+
+* Jan 31 2001 hship
+
 Check in support for DocBook modules (currently, only works under Cygwin).
 
 * Jan 30 2001 hship
